// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar ACT theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-1rgncm6-MuiPaper-root-MuiAppBar-root"
  />
</div>
`;

exports[`AppBar ACT_ET theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-1p3d7ft-MuiPaper-root-MuiAppBar-root"
  />
</div>
`;

exports[`AppBar ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-pofmwd-MuiPaper-root-MuiAppBar-root"
  />
</div>
`;
